// Setup gRPC protobuf meta
syntax = "proto3";
option go_package = "github.com/cble-platform/cble-provider-grpc/pkg/cble";
import "common.proto";

// gRPC Service
service CBLE {
  //  (DO NOT MODIFY)
  rpc Handshake(HandshakeRequest) returns (HandshakeReply) {}
  rpc RegisterProvider(RegistrationRequest) returns (RegistrationReply) {}
  rpc UnregisterProvider(UnregistrationRequest) returns (UnregistrationReply) {}
}

message ProviderFeatures {
  bool deploy = 1;
  bool destroy = 2;
  bool console = 3;
}

// Registration
message RegistrationRequest {
  string id = 1;
  string name = 2;
  string version = 3;
  ProviderFeatures features = 4;
}

message RegistrationReply {
  RPCStatus status = 1;
  string socket_id = 2;
}

// Unregistration
message UnregistrationRequest {
  string id = 1;
  string name = 2;
  string version = 3;
}

message UnregistrationReply { RPCStatus status = 1; }